Fix a few positioning issue with right-aligned action bar items

--- a/static/css/solaris.css
+++ b/static/css/solaris.css
@@ -240,6 +240,8 @@ ul.actionbar {
 
   text-align: middle;  
   display: block;
+
+  height: 1.7em;
   
   list-style-type:none;
 
